--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,54 +18,54 @@ jobs:
         node-version: [18, 20, 22]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: npm
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.1.10
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile --ignore-scripts
 
-      - name: Type check
+      - name: Run type check
         run: bun run type-check
 
-      - name: Lint
+      - name: Run linter
         run: bun run lint
 
-      - name: Format check
+      - name: Check formatting
         run: bun run format:check
 
-      - name: Build
+      - name: Build package
         run: bun run build
 
       - name: CLI smoke test (built output)
-        run: node dist/index.js --help
+        run: node ./dist/index.js --help
 
   build-check:
     name: Verify package can be published
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: 1.1.10
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install --frozen-lockfile --ignore-scripts
@@ -76,15 +76,15 @@ jobs:
       - name: Pack package
         run: npm pack
 
-      - name: Install packed tarball locally
+      - name: Test install from tarball
         run: |
           FILE=$(ls *.tgz)
-          npm install ./$FILE
+          npm install -g ./$FILE
 
-      - name: Verify CLI binaries
+      - name: Verify CLI works when installed globally
         run: |
-          npx better-commit --help
-          npx bc --help
+          better-commit --help
+          bc --help
 
       - name: Show package contents
         run: npm pack --dry-run
