--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   "author": "VSHAL",
   "license": "MIT",
   "dependencies": {
+    "@ai-sdk/groq": "^1.0.0",
+    "ai": "^4.0.0",
     "commander": "^12.0.0",
-    "groq-sdk": "^0.37.0",
     "ink": "^5.0.0",
     "react": "^18.0.0",
     "simple-git": "^3.20.0"
