--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "^14.0.3",
     "ink": "^6.7.0",
     "react": "^19.2.4",
+    "react-devtools-core": "^7.0.1",
     "simple-git": "^3.30.0"
   },
   "devDependencies": {
